--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 
 # don't add .txt to exclude some unimportant files
 data/patterns/*.txt
-data/scores/scores_xml/*
+data/scores/scores_xml/*.xml
+data/scores/output_scores/*.musicxml
+
+# virtual environtment
+venv/
 
 /__pycache__
