--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,17 @@
-matplotlib
-networkx
-music21
+click==7.1.1
+cycler==0.10.0
+decorator==4.4.2
+Flask==1.1.2
+gunicorn==20.0.4
+itsdangerous==1.1.0
+Jinja2==2.11.2
+kiwisolver==1.2.0
+MarkupSafe==1.1.1
+matplotlib==3.2.1
+music21==5.7.2
+networkx==2.4
+numpy==1.18.3
+pyparsing==2.4.7
+python-dateutil==2.8.1
+six==1.14.0
+Werkzeug==1.0.1
